--- a/src/index.pug
+++ b/src/index.pug
@@ -2,13 +2,10 @@ doctype transitional
 html(xmlns='http://www.w3.org/1999/xhtml')
   head
     meta(http-equiv='Content-Type', content='text/html; charset=utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
     title examQuestions
     link(rel='stylesheet', href='/css/common.css')
-    // script(src='//unpkg.com/react@16.0.0/umd/react.production.min.js')
-    // script(src='//unpkg.com/react-dom@16.0.0/umd/react-dom.production.min.js')
-    script(src='//unpkg.com/react@16/umd/react.development.js')
-    script(src='//unpkg.com/react-dom@16/umd/react-dom.development.js')
-    script(src='//code.jquery.com/jquery-3.3.1.min.js')
+    link(rel='stylesheet', href='//stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css')
     script(src='/Scripts/common.js')
   body
-    #contentbox
+    #contentbox.container
